seção de contato inserida

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                         <a href="#contato" class="btn_lateral">CONTATO</a>
                     </div>
                 </div>
+                <div class="icones-redes">
+                    <a href="mailto:kbiancasol@gmail.com" target="_blank"class="links"><i class="fas fa-envelope estilo-icon fa-2x"></i></a>
+                    <a href="https://www.linkedin.com/in/karlabiancasol/" target="_blank"class="links"><i class="fab fa-linkedin estilo-icon fa-2x"></i></a>
+                    <a href="https://github.com/kabianca" target="_blank"class="links"><i class="fab fa-github estilo-icon fa-2x"></i></a>
+                </div>
             </div>
 
         <!-- Conteúdo principal -->
@@ -55,7 +60,6 @@
                                         aproximei do <strong> Desenvolvimento Front-end </strong>. No momento estou em transição de carreira para a área de 
                                         tecnologia, obtendo formações em cursos livres, bootcamps e em processo contínuo de autoaprendizagem 
                                         alinhada a esse objetivo. </p>
-                            </div>
                         </article>
                     </section>
                     <!-- Final da Seção Sobre -->
@@ -108,6 +112,25 @@
                         </div>
                     </section>
                     <!-- Final da Seção de Formação -->
+                    <section id="contato">
+                    <!-- Seção de Contato -->
+                        <div class="titulo-secao">
+                            <h2><span>03</span>Contato</h2>
+                        </div>   
+                            <p>Como posso te ajudar?</p>
+                            <form action="/action_page.php" target="_blank">
+                                <p><input class="formulario" type="text" placeholder="Nome" required name="Nome"></p>
+                                <p><input class="formulario" type="text" placeholder="E-mail" required name="E-mail"></p>
+                                <p><input class="formulario" type="text" placeholder="Mensagem" required name="Mensagem"></p>
+                                <p>
+                                    <button class="botao-enviar" type="submit">
+                                        <i class="fa fa-paper-plane"></i> ENVIAR
+                                    </button>
+                                </p>
+                            </form>
+                    <!-- Final da Seção Contato -->
+                        </div>  
+                    </section>   
                 </main>
             </div>
         </div>
