seção de contato contact.php inserção

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                             <h2><span>03</span>Contato</h2>
                         </div>   
                             <p>Como posso te ajudar?</p>
-                            <form action="/action_page.php" target="_blank">
-                                <p><input class="formulario" type="text" placeholder="Nome" required name="Nome"></p>
-                                <p><input class="formulario" type="text" placeholder="E-mail" required name="E-mail"></p>
-                                <p><input class="formulario" type="text" placeholder="Mensagem" required name="Mensagem"></p>
+                            <form action="contact.php" method="post" id="form" class="contact-form" target="_blank">
+                                <p><input class="formulario" type="text" placeholder="Nome" required name="nome"></p>
+                                <p><input class="formulario" type="text" placeholder="E-mail" required name="email"></p>
+                                <p><input class="formulario" type="text" placeholder="Mensagem" required name="mensagem"></p>
                                 <p>
                                     <button class="botao-enviar" type="submit">
                                         <i class="fa fa-paper-plane"></i> ENVIAR
