seção de contato correção

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </div>
                         <div class="resume-box">
                             <div>
-                                <h3><i class="fa fa-laptop-code fa-2x"></i> Ciclo formativo Pretalab</h3>
+                                <h3><i class="fa fa-laptop-code fa-2x"></i> Ciclo formativo PretaLab</h3>
                                 <h5><a href="https://www.pretalab.com/formacao" target="_blank"> PretaLab / Olabi</a></h5>
                             </div>
                             <span>2022 - Atual</span>
