seção de contato correção v2

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                         </div>   
                             <p>Como posso te ajudar?</p>
                             <form action="contact.php" method="post" id="form" class="contact-form" target="_blank">
-                                <p><input class="formulario" type="text" placeholder="Nome" required name="nome"></p>
-                                <p><input class="formulario" type="text" placeholder="E-mail" required name="email"></p>
-                                <p><input class="formulario" type="text" placeholder="Mensagem" required name="mensagem"></p>
+                                <p><input class="formulario" id="nome" type="text" placeholder="Nome" required name="nome"></p>
+                                <p><input class="formulario" id="email" type="email" placeholder="E-mail" required name="email"></p>
+                                <p><input class="formulario" id="mensagem" type="text" placeholder="Mensagem" required name="mensagem"></p>
                                 <p>
                                     <button class="botao-enviar" type="submit">
                                         <i class="fa fa-paper-plane"></i> ENVIAR
