seção de contato netlify v4

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <h2><span>03</span>Contato</h2>
                         </div>   
                             <p>Como posso te ajudar?</p>
-                            <form action="contact.php" method="post" id="form" class="contact-form" target="_blank">
+                            <form action="contact.php" method="post" id="form" class="contact-form" data-netlify="true" target="_blank">
                                 <p><input class="formulario" id="nome" type="text" placeholder="Nome" required name="name"></p>
                                 <p><input class="formulario" id="email" type="email" placeholder="E-mail" required name="email"></p>
                                 <p><input class="formulario" id="mensagem" type="text" placeholder="Mensagem" required name="message"></p>
